--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     />
     <style>
       :root {
-        --primary-color: #6c63ff;
-        --secondary-color: #3f3d56;
-        --accent-color: #f9a826;
-        --background-color: #f6f8fa;
+        --primary-color: #2c3e50;
+        --secondary-color: #34495e;
+        --accent-color: #3498db;
+        --background-color: #ecf0f1;
         --text-color: #2d3748;
+        --light-text-color: #718096;
       }
 
       body {
@@ -33,70 +34,85 @@
       }
 
       header {
-        background-color: var(--primary-color);
+        background: linear-gradient(
+          135deg,
+          var(--primary-color),
+          var(--secondary-color)
+        );
         color: white;
         text-align: center;
-        padding: 3rem 0;
+        padding: 4rem 0;
         clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
       }
 
       header h1 {
-        font-size: 3rem;
+        font-size: 3.5rem;
         margin: 0;
         font-weight: 600;
+        letter-spacing: 1px;
       }
 
       header p {
-        font-size: 1.2rem;
-        margin-top: 10px;
+        font-size: 1.3rem;
+        margin-top: 15px;
         font-weight: 300;
+        opacity: 0.9;
       }
 
       main {
-        padding: 3rem 1rem;
+        padding: 4rem 1rem;
         max-width: 1200px;
         margin: 0 auto;
       }
 
       h2 {
-        color: var(--secondary-color);
+        color: var(--primary-color);
         font-size: 2.5rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 2rem;
         text-align: center;
+        position: relative;
+      }
+
+      h2::after {
+        content: "";
+        display: block;
+        width: 50px;
+        height: 3px;
+        background-color: var(--accent-color);
+        margin: 10px auto 0;
       }
 
       .services {
         display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        justify-content: center;
+        justify-content: space-between;
+        gap: 20px;
         margin-bottom: 4rem;
       }
 
       .service {
-        flex-basis: calc(33.333% - 30px);
+        flex: 1;
         background-color: white;
         padding: 2rem;
         border-radius: 15px;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
         transition: all 0.3s ease-in-out;
         text-align: center;
       }
 
       .service:hover {
         transform: translateY(-10px);
-        box-shadow: 0 15px 30px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 15px 40px rgba(0, 0, 0, 0.1);
       }
 
       .service i {
         font-size: 3rem;
-        color: var(--primary-color);
-        margin-bottom: 1rem;
+        color: var(--accent-color);
+        margin-bottom: 1.5rem;
       }
 
       .service h3 {
-        color: var(--secondary-color);
-        font-size: 1.5rem;
+        color: var(--primary-color);
+        font-size: 1.4rem;
         margin-bottom: 1rem;
       }
 
@@ -107,8 +123,9 @@
       }
 
       .service ul li {
-        margin-bottom: 0.5rem;
+        margin-bottom: 0.7rem;
         font-size: 1rem;
+        color: var(--light-text-color);
       }
 
       .service ul li:before {
@@ -121,40 +138,45 @@
 
       .why-choose-us {
         background-color: white;
-        padding: 3rem;
+        padding: 4rem;
         border-radius: 15px;
         margin-bottom: 4rem;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
       }
 
       .why-choose-us ul {
         list-style: none;
         padding: 0;
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-        gap: 20px;
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+        gap: 25px;
       }
 
       .why-choose-us ul li {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
         display: flex;
         align-items: center;
+        color: var(--light-text-color);
       }
 
       .why-choose-us ul li:before {
         content: "\f058";
         font-family: "Font Awesome 5 Free";
         font-weight: 900;
-        color: var(--primary-color);
-        margin-right: 10px;
+        color: var(--accent-color);
+        margin-right: 15px;
         font-size: 1.5rem;
       }
 
       .contact {
         text-align: center;
-        background-color: var(--secondary-color);
+        background: linear-gradient(
+          135deg,
+          var(--secondary-color),
+          var(--primary-color)
+        );
         color: white;
-        padding: 3rem 1rem;
+        padding: 4rem 2rem;
         border-radius: 15px;
         position: relative;
         overflow: hidden;
@@ -169,19 +191,24 @@
         height: 200%;
         background: radial-gradient(
           circle,
-          var(--primary-color) 0%,
+          rgba(255, 255, 255, 0.1) 0%,
           transparent 70%
         );
-        opacity: 0.1;
       }
 
       .contact h2 {
-        font-size: 2.5rem;
+        font-size: 2.8rem;
         color: white;
+        margin-bottom: 2rem;
+      }
+
+      .contact h2::after {
+        background-color: var(--accent-color);
       }
 
       .contact p {
-        font-size: 1.1rem;
+        font-size: 1.2rem;
+        margin-bottom: 1rem;
       }
 
       .contact a {
@@ -195,29 +222,35 @@
         color: white;
       }
 
-      @media (max-width: 768px) {
+      @media (max-width: 992px) {
         .services {
           flex-direction: column;
         }
 
         .service {
-          flex-basis: 100%;
+          margin-bottom: 20px;
         }
+      }
 
+      @media (max-width: 768px) {
         header h1 {
-          font-size: 2.5rem;
+          font-size: 2.8rem;
         }
 
         header p {
-          font-size: 1rem;
+          font-size: 1.1rem;
         }
 
         h2 {
-          font-size: 2rem;
+          font-size: 2.2rem;
         }
 
         .contact h2 {
-          font-size: 2rem;
+          font-size: 2.2rem;
+        }
+
+        .why-choose-us {
+          padding: 2rem;
         }
       }
     </style>
@@ -278,7 +311,7 @@
         <h2>Contact Us Today for a Free Consultation</h2>
         <p>
           <i class="fas fa-envelope"></i> Email:
-          <a href="mailto:info@zsmconsultants.com">info@zsmconsultants.com</a>
+          <a href="mailto:consultantszsm@gmail.com">info@zsmconsultants.com</a>
         </p>
         <p>
           <i class="fab fa-linkedin"></i> LinkedIn:
