--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <h2>Contact Us Today for a Free Consultation</h2>
         <p>
           <i class="fas fa-envelope"></i> Email:
-          <a href="mailto:consultantszsm@gmail.com">info@zsmconsultants.com</a>
+          <a href="mailto:consultantszsm@gmail.com">consultantszsm@gmail.com</a>
         </p>
         <p>
           <i class="fab fa-linkedin"></i> LinkedIn:
