--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZSM Consultants - Innovative Global Business Solutions</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Playfair+Display:wght@700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
     />
     <link
@@ -16,20 +16,18 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
-    <!-- Import the external CSS file -->
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <h1>ZSM Consultants</h1>
       <p>Innovative Global Business Solutions for Tomorrow's Challenges</p>
-      <a href="#contact" class="cta-button">Get a Free Consultation</a>
     </header>
 
     <main>
-      <section>
+      <section class="intro">
         <h2>Empowering Businesses Worldwide</h2>
-        <p style="text-align: center; max-width: 800px; margin: 0 auto 2rem">
+        <p>
           At ZSM Consultants, we deliver cutting-edge solutions tailored to your
           unique business needs. Our global expertise helps you navigate complex
           challenges and seize new opportunities in the ever-evolving business
@@ -113,53 +111,27 @@
       </section>
     </main>
 
-    <div class="scroll-to-top">
-      <i class="fas fa-chevron-up"></i>
-    </div>
-
     <script>
-      // Scroll to top functionality
-      const scrollToTopButton = document.querySelector(".scroll-to-top");
-
-      window.addEventListener("scroll", () => {
-        if (window.pageYOffset > 300) {
-          scrollToTopButton.classList.add("visible");
-        } else {
-          scrollToTopButton.classList.remove("visible");
-        }
-      });
-
-      scrollToTopButton.addEventListener("click", () => {
-        window.scrollTo({
-          top: 0,
-          behavior: "smooth",
-        });
-      });
-
       // Add animation to services on scroll
       const services = document.querySelectorAll(".service");
 
-      const observerOptions = {
-        root: null,
-        rootMargin: "0px",
-        threshold: 0.1,
-      };
-
-      const observer = new IntersectionObserver((entries, observer) => {
-        entries.forEach((entry) => {
-          if (entry.isIntersecting) {
-            entry.target.style.opacity = "1";
-            entry.target.style.transform = "translateY(0)";
-            observer.unobserve(entry.target);
-          }
-        });
-      }, observerOptions);
+      const observer = new IntersectionObserver(
+        (entries) => {
+          entries.forEach((entry) => {
+            if (entry.isIntersecting) {
+              entry.target.classList.add("animate");
+              observer.unobserve(entry.target);
+            }
+          });
+        },
+        {
+          root: null,
+          rootMargin: "0px",
+          threshold: 0.1,
+        }
+      );
 
       services.forEach((service) => {
-        service.style.opacity = "0";
-        service.style.transform = "translateY(50px)";
-        service.style.transition =
-          "opacity 0.5s ease-out, transform 0.5s ease-out";
         observer.observe(service);
       });
     </script>
